--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -6,7 +6,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
 		<servlet-name>InfiniteLoopGoogleApp</servlet-name>
-		<servlet-class>edu.uwm.cs.InfiniteLoopGoogleAppServlet</servlet-class>
+		<servlet-class>edu.uwm.cs361.InfiniteLoopGoogleAppServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>InfiniteLoopGoogleApp</servlet-name>
