--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -5,13 +5,25 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
 		<servlet-name>InfiniteLoopGoogleApp</servlet-name>
 		<servlet-class>edu.uwm.cs361.InfiniteLoopGoogleAppServlet</servlet-class>
 	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>InfiniteLoopGoogleApp</servlet-name>
 		<url-pattern>/infiniteloopgoogleapp</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
