--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -4,14 +4,15 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-	<servlet>
-		<servlet-name>LoginServlet</servlet-name>
-		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
-	</servlet>
-	
+
 	<servlet>
 		<servlet-name>InfiniteLoopGoogleApp</servlet-name>
 		<servlet-class>edu.uwm.cs361.InfiniteLoopGoogleAppServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
@@ -20,7 +21,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	
 	<servlet-mapping>
-		<servlet-name>LoginServlet</servlet-name>
+		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
 	
