--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -10,9 +10,39 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
 	</servlet>
 	
+	<servlet>
+		<servlet-name>AddUser</servlet-name>
+		<servlet-class>edu.uwm.cs361.AddUserServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>Display</servlet-name>
+		<servlet-class>edu.uwm.cs361.DisplayServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>Clear</servlet-name>
+		<servlet-class>edu.uwm.cs361.ClearServlet</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>AddUser</servlet-name>
+		<url-pattern>/addUser</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>Display</servlet-name>
+		<url-pattern>/display</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>Clear</servlet-name>
+		<url-pattern>/clear</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
