--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -29,7 +29,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>CreateInstructor</servlet-name>
 		<servlet-class>edu.uwm.cs361.CreateInstuctorServlet</servlet-class>
 	</servlet>
-	
+	<servlet>
+		<servlet-name>StudentCharges</servlet-name>
+		<servlet-class>edu.uwm.cs361.StudentChargesServlet</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
 		<url-pattern>/login</url-pattern>
@@ -54,7 +58,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>CreateInstructor</servlet-name>
 		<url-pattern>/createInstructor</url-pattern>
 	</servlet-mapping>
-	
+	<servlet-mapping>
+		<servlet-name>StudentCharges</servlet-name>
+		<url-pattern>/studentCharges</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
