--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -33,6 +33,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>StudentCharges</servlet-name>
 		<servlet-class>edu.uwm.cs361.StudentChargesServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>Awards</servlet-name>
+		<servlet-class>edu.uwm.cs361.IssueAwardServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
@@ -61,6 +66,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>StudentCharges</servlet-name>
 		<url-pattern>/studentCharges</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>IssueAward</servlet-name>
+		<url-pattern>/issueAward</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
