--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -35,7 +35,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	
 	<servlet>
-		<servlet-name>Awards</servlet-name>
+		<servlet-name>IssueAward</servlet-name>
 		<servlet-class>edu.uwm.cs361.IssueAwardServlet</servlet-class>
 	</servlet>
 
@@ -70,7 +70,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	<servlet-mapping>
 		<servlet-name>IssueAward</servlet-name>
-		<url-pattern>/issueAward</url-pattern>
+		<url-pattern>/IssueAward</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
