--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -11,6 +11,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	
 	<servlet>
+		<servlet-name>AdminHome</servlet-name>
+		<servlet-class>edu.uwm.cs361.AdminHome</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>Logout</servlet-name>
+		<servlet-class>edu.uwm.cs361.LogoutServlet</servlet-class>
+	</servlet>
+	
+	
+	
+	<servlet>
 		<servlet-name>AddUser</servlet-name>
 		<servlet-class>edu.uwm.cs361.AddUserServlet</servlet-class>
 	</servlet>
@@ -45,8 +57,19 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	
 	<servlet-mapping>
+		<servlet-name>Logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet-mapping>
 		<servlet-name>AddUser</servlet-name>
 		<url-pattern>/addUser</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>AdminHome</servlet-name>
+		<url-pattern>/AdminHome</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
