Rerouted to StudentChargesServlet
- web.xml, index.html, and admin_header.html all link to
StudentChargesServlet and thus doGet works and links to the .jsp with
the appropriate students.

--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -98,7 +98,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>StudentCharges</servlet-name>
-		<url-pattern>/studentCharges</url-pattern>
+		<url-pattern>/StudentChargesServlet</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
