--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -46,6 +46,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>CreateInstructor</servlet-name>
 		<servlet-class>edu.uwm.cs361.CreateInstuctorServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>CreateStudent</servlet-name>
+		<servlet-class>edu.uwm.cs361.CreateStudentServlet</servlet-class>
+	</servlet>
+	
 	<servlet>
 		<servlet-name>StudentCharges</servlet-name>
 		<servlet-class>edu.uwm.cs361.StudentChargesServlet</servlet-class>
@@ -96,6 +102,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>CreateInstructor</servlet-name>
 		<url-pattern>/createInstructor</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>CreateStudent</servlet-name>
+		<url-pattern>/createStudent</url-pattern>
+	</servlet-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>StudentCharges</servlet-name>
 		<url-pattern>/StudentChargesServlet</url-pattern>
