--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -28,8 +28,8 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	
 	<servlet>
-		<servlet-name>AddUser</servlet-name>
-		<servlet-class>edu.uwm.cs361.AddUserServlet</servlet-class>
+		<servlet-name>CreateTeacher</servlet-name>
+		<servlet-class>edu.uwm.cs361.util.CreateTeacherServlet</servlet-class>
 	</servlet>
 	
 	<servlet>
@@ -79,8 +79,8 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	
 	<servlet-mapping>
-		<servlet-name>AddUser</servlet-name>
-		<url-pattern>/addUser</url-pattern>
+		<servlet-name>CreateTeacher</servlet-name>
+		<url-pattern>/createTeacher</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
