--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -25,11 +25,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>edu.uwm.cs361.LogoutServlet</servlet-class>
 	</servlet>
 	
-	
-	
 	<servlet>
 		<servlet-name>CreateTeacher</servlet-name>
 		<servlet-class>edu.uwm.cs361.util.CreateTeacherServlet</servlet-class>
+	</servlet>
+	
+	<servlet>
+		<servlet-name>CreateAdmin</servlet-name>
+		<servlet-class>edu.uwm.cs361.util.CreateAdminServlet</servlet-class>
 	</servlet>
 	
 	<servlet>
@@ -77,10 +80,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
 	
-	
 	<servlet-mapping>
 		<servlet-name>CreateTeacher</servlet-name>
 		<url-pattern>/createTeacher</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>CreateAdmin</servlet-name>
+		<url-pattern>/createAdmin</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
