--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -64,6 +64,16 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>IssueAward</servlet-name>
 		<servlet-class>edu.uwm.cs361.IssueAwardServlet</servlet-class>
 	</servlet>
+	
+	<servlet>
+		<servlet-name>CreateCharge</servlet-name>
+		<servlet-class>edu.uwm.cs361.util.CreateChargeServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>CreateCharge</servlet-name>
+		<url-pattern>/createCharge</url-pattern>
+	</servlet-mapping>
 
 	<servlet-mapping>
 		<servlet-name>Login</servlet-name>
