--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -6,6 +6,17 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	
 	<servlet>
+		<servlet-name>EmailJob</servlet-name>
+		<servlet-class>edu.uwm.cs361.EmailJobServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>EmailJob</servlet-name>
+		<url-pattern>/emailJob</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
 		<servlet-name>Login</servlet-name>
 		<servlet-class>edu.uwm.cs361.LoginServlet</servlet-class>
 	</servlet>
