--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -37,6 +37,12 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	</servlet>
 	
 	<servlet>
+		<servlet-name>TeacherHome</servlet-name>
+		<servlet-class>edu.uwm.cs361.TeacherHome</servlet-class>
+	</servlet>
+	
+	
+	<servlet>
 		<servlet-name>Logout</servlet-name>
 		<servlet-class>edu.uwm.cs361.LogoutServlet</servlet-class>
 	</servlet>
@@ -124,6 +130,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>CreateTeacher</servlet-name>
 		<url-pattern>/createTeacher</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>TeacherHome</servlet-name>
+		<url-pattern>/TeacherHome</url-pattern>
 	</servlet-mapping>
 	
 	<servlet-mapping>
