--- a/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
+++ b/InfiniteLoopGoogleApp/war/WEB-INF/web.xml
@@ -10,6 +10,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>edu.uwm.cs361.Attendance</servlet-class>
 	</servlet>
 	
+	
+	
+	<servlet>
+		<servlet-name>SpecificStudentPage</servlet-name>
+		<servlet-class>edu.uwm.cs361.SpecificStudentPageServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>SpecificStudentPage</servlet-name>
+		<url-pattern>/specificStudent</url-pattern>
+	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>EmailJob</servlet-name>
 		<servlet-class>edu.uwm.cs361.EmailJobServlet</servlet-class>
